--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,1 +1,143 @@
-nav{height:0;line-height:0;font-family:'Josefin Sans', sans-serif}nav{color:#FFF;width:100%;height:0;line-height:0;background:#00ADB5}nav ul a{font-size:20px;color:#FFF;padding:0px 20px}nav ul li{float:none}.nav-div{background:#00ADB5}@media screen and (min-width:300px){.nav{width:75%;position:fixed;top:0;bottom:0;-webkit-transform:translateX(-100%);-ms-transform:translateX(-100%);transform:translateX(-100%);-webkit-transition:0.15s;transition:0.15s;z-index:20;height:100%}.nav-toggle{position:absolute;left:100%;top:1em;padding:0.5em;background:inherit;color:white;cursor:pointer;font-size:1.2em;line-height:1;z-index:20}#nav-toggle{position:absolute;clip:rect(0 0 0 0);opacity:0}#nav-toggle:checked ~ .nav{-webkit-transform:translateX(0);-ms-transform:translateX(0);transform:translateX(0)}#nav-toggle:checked ~ .nav > .nav-toggle{-webkit-transform:rotate(90deg);-ms-transform:rotate(90deg);transform:rotate(90deg)}.nav-ul-li{font-size:20px;color:#fff;padding:5px;list-style:none;font-weight:100;display:block;height:50px;position:relative}.nav-ul-li:first-child{padding:20px 5px}.nav-ul-li-span{font-size:20px;margin-right:15px}.nav-div-footer{position:absolute;background:rgba(237, 237, 237, 0.5) none repeat scroll 0% 0%;padding:15px 5px;bottom:0px;width:100%;left:0px;margin-top:20px}.nav-div-img{border-radius:50%;width:50px;height:50px}.nav-div-span{padding-left:20px;color:#fff;font-size:20px;position:relative;bottom:16px}.nav-ul-a{text-decoration:none;color:#fff}}@media screen and (min-width: 480px){.nav{width:40%}.header-seccion{right:10%}}@media screen and (min-width: 481px) and (max-width: 640px){.nav{width:55%}}@media screen and (min-width: 768px){.nav{width:30%}.nav-ul-li-span{font-size:30px}.nav-ul-li{font-size:24px}}
+nav {
+    height: 0;
+    line-height: 0;
+    font-family: 'Josefin Sans', sans-serif
+}
+
+nav {
+    color: #FFF;
+    width: 100%;
+    height: 0;
+    line-height: 0;
+    background: #00ADB5 !important;
+}
+
+nav ul a {
+    font-size: 20px;
+    color: #FFF;
+    padding: 0px 20px;
+}
+
+nav ul li {
+    float: none;
+}
+
+.nav-div {
+    background: #00ADB5 !important;
+}
+
+.nav .nav-div ul li {
+    display: block;
+    width: 100%;
+}
+@media screen and (min-width:300px) {
+    .nav {
+        width: 75%;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        -webkit-transform: translateX(-100%);
+        -ms-transform: translateX(-100%);
+        transform: translateX(-100%);
+        -webkit-transition: 0.15s;
+        transition: 0.15s;
+        z-index: 20;
+        height: 100%;
+    }
+    .nav-toggle {
+        position: absolute;
+        left: 100%;
+        top: 1em;
+        padding: 0.5em;
+        background: inherit;
+        color: white;
+        cursor: pointer;
+        font-size: 1.2em;
+        line-height: 1;
+        z-index: 20
+    }
+    #nav-toggle {
+        position: absolute;
+        clip: rect(0 0 0 0);
+        opacity: 0
+    }
+    #nav-toggle:checked ~ .nav {
+        -webkit-transform: translateX(0);
+        -ms-transform: translateX(0);
+        transform: translateX(0)
+    }
+    #nav-toggle:checked ~ .nav > .nav-toggle {
+        -webkit-transform: rotate(90deg);
+        -ms-transform: rotate(90deg);
+        transform: rotate(90deg)
+    }
+    .nav-ul-li {
+        font-size: 20px;
+        color: #fff;
+        padding: 5px;
+        list-style: none;
+        font-weight: 100;
+        display: block;
+        height: 50px;
+        position: relative
+    }
+    .nav-ul-li:first-child {
+        padding: 20px 5px
+    }
+    .nav-ul-li-span {
+        font-size: 20px;
+        margin-right: 15px
+    }
+    .nav-div-footer {
+        position: absolute;
+        background: rgba(237, 237, 237, 0.5) none repeat scroll 0% 0%;
+        padding: 15px 5px;
+        bottom: 0px;
+        width: 100%;
+        left: 0px;
+        margin-top: 20px
+    }
+    .nav-div-img {
+        border-radius: 50%;
+        width: 50px;
+        height: 50px
+    }
+    .nav-div-span {
+        padding-left: 20px;
+        color: #fff;
+        font-size: 20px;
+        position: relative;
+        bottom: 16px
+    }
+    .nav-ul-a {
+        text-decoration: none;
+        color: #fff
+    }
+}
+
+@media screen and (min-width: 480px) {
+    .nav {
+        width: 40%
+    }
+    .header-seccion {
+        right: 10%
+    }
+}
+
+@media screen and (min-width: 481px) and (max-width: 640px) {
+    .nav {
+        width: 55%
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .nav {
+        width: 30%
+    }
+    .nav-ul-li-span {
+        font-size: 30px
+    }
+    .nav-ul-li {
+        font-size: 24px
+    }
+}
