--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -9,7 +9,7 @@ nav {
     width: 100%;
     height: 0;
     line-height: 0;
-    background: #00ADB5 !important;
+    background: #212929 !important;
 }
 
 nav ul a {
@@ -23,7 +23,7 @@ nav ul li {
 }
 
 .nav-div {
-    background: #00ADB5 !important;
+    /* background: #00ADB5 !important; */
 }
 
 .nav .nav-div ul li {
